--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -12,7 +12,6 @@
 }
 
 .leftSection {
-  background-color: orange;
   width: 275px;
   height: 100dvh;
 }
@@ -21,7 +20,6 @@
   position: fixed;
   width: inherit;
   height: 100dvh;
-  background-color: orange;
   display: flex;
   flex-direction: column;
 }
@@ -81,7 +79,6 @@
 }
 
 .rightSectionInner {
-  background-color: aqua;
   height: 100%;
   width: 998px;
   display: flex;
@@ -89,13 +86,11 @@
 }
 
 .main {
-  background-color: aquamarine;
   width: 600px;
   height: 200dvh;
 }
 
 .rightSection {
-  background-color: blue;
   width: 350px;
   height: 100%;
 }
@@ -124,4 +119,16 @@
   padding: 12px;
   margin-left: 5px;
   font-size: 15px;
+}
+
+.followRecommend {
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(247, 249, 249);
+    border-radius: 16px;
+    margin: 12px 0;
+    padding: 12px 16px;
+}
+.followRecommend h3 {
+    padding-bottom: 12px;
 }
