--- a/src/app/(afterLogin)/_component/navMenu.module.css
+++ b/src/app/(afterLogin)/_component/navMenu.module.css
@@ -13,4 +13,11 @@
     margin-left: 20px;
     margin-right: 16px;
     font-size: 20px;
+    display: none;
+}
+
+@media all and (min-width: 1300px){
+  .navPill > div {
+    display: inline-block;
+  }
 }
